--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -39,11 +39,12 @@ jobs:
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
-          cli: 'nightly'
-          sdk: 'nightly'
+          sdk: nightly
+          cli: nightly
           bindings: geode-sdk/bindings
           bindings-ref: main
           combine: true
+          export-pdb: true
           target: ${{ matrix.config.target }}
 
   package:
